adding some files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
 bin_PROGRAMS = positrack
 positrack_SOURCES = callback.c comedi_code.c firewire_camera_interface.c tracking_interface.c main.h main.c ../config.h
 positrack_CPPFLAGS = @GTK_CFLAGS@ @GSTREAMER_CFLAGS@ @GSTREAMER_BASE_CFLAGS@  @GSTREAMER_INTERFACES_CFLAGS@ -DDATADIR='"$(datadir)"'
-positrack_LDADD = @GTK_LIBS@ @GSTREAMER_LIBS@ @GSTREAMER_BASE_LIBS@ @GSTREAMER_INTERFACES_LIBS@ -lcomedi -Wall
-positrack_LDFLAGS= -export-dynamic
+positrack_LDADD = @GTK_LIBS@ @GSTREAMER_LIBS@ @GSTREAMER_BASE_LIBS@ @GSTREAMER_INTERFACES_LIBS@ -lcomedi
+positrack_LDFLAGS= -export-dynamic -Wall
 
 xmldir = $(datadir)
 dist_xml_DATA = positrack_sed.glade
