--- a/configure.ac
+++ b/configure.ac
@@ -30,5 +30,5 @@ AC_CHECK_FUNCS([memset])
 AC_CHECK_HEADERS([fcntl.h])
 AC_PREREQ
 AC_TYPE_OFF_T
-AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile data/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile])
 AC_OUTPUT
