Getting the buffers works, but only every 25 ms. As soon as under 25 ms, it blocks in a blind loop.

--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,7 @@ PKG_CHECK_MODULES([GSTREAMER], [gstreamer-1.0], [], [])
 PKG_CHECK_MODULES([GSTREAMER_BASE], [gstreamer-base-1.0],[],[])
 PKG_CHECK_MODULES([GSTREAMER_VIDEO], [gstreamer-video-1.0],[],[])
 PKG_CHECK_MODULES([GSTREAMER_PLUGINS_BASE], [gstreamer-plugins-base-1.0],[],[])
+PKG_CHECK_MODULES([GSTREAMER_APP],[gstreamer-app-1.0],[],[])
 PKG_CHECK_MODULES([GTK], [gtk+-2.0 >= 2.4.0])
 PKG_CHECK_MODULES([cairo], [cairo])
 AC_SEARCH_LIBS([clock_gettime],[rt])
