--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
 bin_PROGRAMS = positrack
-positrack_SOURCES = callback.c comedi_code.c tracked_object.c tracking.c stimulation.c firewire_camera_interface.c main.h gst.c main.c ../config.h
+positrack_SOURCES = callback.c comedi_code.c positrack_shared_memory.c tracked_object.c tracking.c stimulation.c firewire_camera_interface.c main.h gst.c main.c ../config.h
 positrack_CPPFLAGS = @GTK_CFLAGS@ @GSTREAMER_CFLAGS@ @GSTREAMER_BASE_CFLAGS@ @GSTREAMER_PLUGINS_BASE_CFLAGS@ @GSTREAMER_VIDEO_CFLAGS@ @GSTREAMER_APP_CFLAGS@  -DDATADIR='"$(datadir)"'
 positrack_LDADD = @GTK_LIBS@ @GSTREAMER_LIBS@ @GSTREAMER_BASE_LIBS@ @GSTREAMER_PLUGINS_BASE_LIBS@ @GSTREAMER_VIDEO_LIBS@ -lcomedi -lgstapp-1.0
-positrack_LDFLAGS= -export-dynamic -Wall
+positrack_LDFLAGS= -export-dynamic -Wall -lrt
 
 xmldir = $(datadir)
 dist_xml_DATA = positrack_sed.glade
