get timestamp of frame and set wr permission on /dev/fw0

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,3 +1,7 @@
 iconsdir = $(datadir)
 icons_DATA = radar-icon.png
 EXTRA_DIST = $(icons_DATA)
+
+## we should try to find a way so that we don't have to set the udev directory ourself
+udevrulesdir=/etc/udev/rules.d/
+udevrules_DATA = 10-ieee1394.rules
